@@ -5,6 +5,7 @@
   * #text_field_element
   * #hidden_field_element
   * #text_area_element
+  * #select_list_element
 === 2016-07-05
 * Enhancements
   * Added #value= to TextField and TextArea
